# gigahorse-toolchain

./: .dockerignore  .gitignore  .gitmodules  .loop.html  Advanced.md  All_Component_CheckedTransferCall.csv  All_Component_CheckedTransferFromCall.csv  All_Component_ReadFromTrustedStorageId.csv  All_Component_UnguardedDelegateCallToSig.csv  All_Component_UnguardedExternalCallToSig.csv  All_Component_WriteToUntrustedStorageId.csv  Dockerfile  ErrorSignature.facts  EventSignature.facts  LICENSE  Makefile  README.md  Tuning.md  bitbucket-pipelines.yml  bulk_analyze.py  cfg_gen_config.json  cfglib.py  conftest.py  credentials.json  decompile.sh  destackify.py  dis2bb.py  fetch.sh  generatefacts  gigahorse.py  lattice.py  opcodes.py  optimise.py  pyproject.toml  run_tests.py  run_tests.sh  stacksizeanalysis.py  tac.py  tac_gen_config.json  tacops.py  (+2 more)
.github/workflows/: docker-publish.yml  publish-deps-docker.yml  publish-deps-souffle23-docker.yml  publish-deps-souffle24-docker.yml  publish-m1-docker.yml  run-tests.yml
clientlib/: casts_shifts.dl  constant_folding_variable_value.dl  constants.dl  data_structures.dl  decompiler_imports.dl  dominators.dl  facts_to_cfg.py  flows.dl  function_inliner.dl  guards.dl  loops.dl  loops_semantics.dl  multi_contract.dl  tac_instructions.dl  types.dl  util.dl  vulnerability_macros.dl
clientlib/context-sensitivity/: client_context.dl
clientlib/memory_modeling/: README.md  arrays.dl  clienthelpers.dl  components.dl  core.dl  helpers.dl  loops.dl  memory_addresses.dl  memory_modeling.dl  memory_modeling_api.dl  metrics.dl  misc.dl  structs.dl  uses_defs_abstractions.dl
clientlib/storage_modeling/: README.md  clienthelpers.dl  data_structures.dl  legacy_data_structures.dl  metrics.dl  storage_modeling.dl  storage_modeling_api.dl  tight_packing.dl  type_inference.dl
clientlib/tac-transformers/: abstract_block_insertor.dl  abstract_function_cloner.dl  abstract_function_inliner.dl  abstract_statement_insertor.dl  abstract_tac_transformer.dl  insertors_common.dl
clients/: analytics_client.dl  visualizeout.py
docker/linux/: Dockerfile
docker/mac/: Dockerfile  souffle_2.2-1_arm64.deb
examples/: long_running.hex
logic/: N-Call-Context.dl  PublicFunctionSignature.dl  README.md  alt_cloner.dl  analyse_opcodes.py  analyze.py  backup_results.sh  coverage.sh  debug.dl  decompiler.dl  decompiler_analytics.dl  decompiler_input.dl  decompiler_input_opcodes.dl  decompiler_input_statements.dl  decompiler_inputs.dl  decompiler_instructions.dl  decompiler_output.dl  fallback_scalable.dl  filterresults.py  find_contract.py  full_3context.dl  full_Ncontext+.dl  full_Ncontext.dl  functions-fragments.dl  functions.dl  gather_decompilation_results.py  global.dl  global_components.dl  global_only.dl  global_pre_analysis.dl  google_utils.py  infoflow-analyze.sh  last_resort.dl  local.dl  local_components.dl  main.dl  newanalyze.py  newdecompiler.sh  selective_1context.dl  selective_2context.dl  (+8 more)
logic/common/: sorting.dl
logic/context-sensitivity/: abstract-context.dl  abstract_context.dl  callsite_context.dl  context_sensitivity.dl  finite_precise_context.dl  finite_shrinking_context.dl  full_1context.dl  full_Ncontext+.dl  full_Ncontext.dl  hybrid_precise_context.dl  selective_context.dl  selective_context_v2.dl  transactional-context.dl  transactional_context.dl  transactional_shrinking_context.dl  transactional_with_delta_context.dl  transactional_with_residual_context.dl
src/: .dataflow.py.swp  basicblock.py  blockparse.py  cfglib.py  common.py  dasmcfg.py  dataflowsettings.py  destackify.py  dis2bb.py  exporter.py  func_extr.py  logger.py  logging.py  opcodes.py  optimise.py  pagify.py  runners.py  source_map.py  stacksizeanalysis.py  tac.py  tac_schema.py  utils.py
src/pagifier/: pagify.js  pagify.py
src/test/: common.py  decompilation_size_test.py
tests/context-sensitivity/: callsite.json  callsiteplus.hex  callsiteplus.json  finite-precise.json  hybrid-precise.json  selective.json  selectiveplus.json  shrinking-alt.json  shrinking.json  transactional.json
tests/core-decompiler/: 00a3c53138715e8c2b8c078c7821e763-incomplete-with-opt.hex  00a3c53138715e8c2b8c078c7821e763-incomplete-with-opt.json  00a3c53138715e8c2b8c078c7821e763-incomplete-with-opt_metadata.json  0x4679ea96f15a4742274dc72e1a58e01af333d302-incomplete-transferFrom.hex  0x4679ea96f15a4742274dc72e1a58e01af333d302-incomplete-transferFrom.json  0xd129D8C12f0e7aA51157D9e6cc3F7Ece2dc84ecD-mevbot.hex  0xd129D8C12f0e7aA51157D9e6cc3F7Ece2dc84ecD-mevbot.json  11116421e77b80a26b273843d54829d8_metadata.json  134a17969a5a108b721d9ff270bc6dca_callprivatei.hex  134a17969a5a108b721d9ff270bc6dca_callprivatei.json  134a17969a5a108b721d9ff270bc6dca_callprivatei_metadata.json  2eb080bb2a31076a82ed1433ed020184-missingop.hex  2eb080bb2a31076a82ed1433ed020184-missingop.json  49ceac2769b83ac04f76bb527e62ed01_metadata.json  7A250D5630B4CF539739DF2C5DACB4C659F2488D-UniRouterV2.hex  7A250D5630B4CF539739DF2C5DACB4C659F2488D-UniRouterV2.json  F650C3D88D12DB855B8BF7D11BE6C55A4E07DCC9.hex  F650C3D88D12DB855B8BF7D11BE6C55A4E07DCC9.json  WETH.json
tests/early-cloning/: 025e998a619d32b096abc559fb0e4b4b_preInsertor.hex  025e998a619d32b096abc559fb0e4b4b_preInsertor.json  025e998a619d32b096abc559fb0e4b4b_preInsertor_metadata.json  94e2dee39b28629940bf79e23d0cf206_generalCloner.hex  94e2dee39b28629940bf79e23d0cf206_generalCloner.json  94e2dee39b28629940bf79e23d0cf206_generalCloner_metadata.json
tests/guards/: Guards.sol  external-guards.hex  external-guards.json  mapping-guard.hex  mapping-guard.json  owner-guard.hex  owner-guard.json  reentrancy-guard.hex  reentrancy-guard.json  reentrancy-guard.sol
tests/multi-contract/: multi1.json
tests/storage/: 0xf40593A22398c277237266A81212f7D41023b630-merged.hex  0xf40593A22398c277237266A81212f7D41023b630-merged.json  Audius.hex  Audius.json  Storage.sol  array-mapping.hex  array-mapping.json  array-merged.hex  array-merged.json  array-two-words.hex  array-two-words.json  array1-iropt.hex  (+25 more)
tooling/: compare-runs.py  directives.py  gigahorse.html  gigahorse.sqlite3
(+75 files in other folders)
